n-vm-macros/tests/compile_fail/migrated_option.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::in_vm(iommu)]
fn migrated_option() {}

fn main() {}